--- a/blog/css/style.css
+++ b/blog/css/style.css
@@ -535,7 +535,22 @@ body {
   margin: 0 12px 1em;
 }
 .article-header {
-  padding: 20px 20px 0;
+  padding: 20px 20px 1em;
+}
+@media screen and (max-width: 479px) {
+  .article-header {
+    padding: 20px 20px 0;
+  }
+}
+@media screen and (min-width: 768px) {
+  .article-updated {
+    float: right;
+  }
+}
+@media screen and (max-width: 479px) {
+  .article-updated {
+    padding: 1em 0 0;
+  }
 }
 .article-title {
   text-decoration: none;
